a week's worth of progress"

--- a/10-interactivity/index.html
+++ b/10-interactivity/index.html
@@ -9,25 +9,49 @@
   </head>
   <body>
     <!-- Hover State Styling -->
-
+    <button class="bg-black text-white py-3 px-5 m-3 rounded-lg hover:bg-orange-500 hover:text-black active:bg-orange-300">Submit</button>
     <!-- Focus State Styling -->
-
+    <button class="bg-black text-white py-3 px-5 m-3 rounded-lg hover:bg-green-200 hover:text-black focus:bg-green-500 focus:text-black active:bg-green-300">Submit</button>
     <!-- Active State Styling -->
-
+    <button class="bg-black text-white py-3 px-5 m-3 rounded-lg  active:bg-green-300">Submit</button>
     <!-- Styling based on parent state -->
-
+    <a href="" class="group block max-w-xs mx-auto rounded-lg p-6 bg-white shadow-lg space-y-3 hover:bg-sky-500">
+      <h3 class="group-hover:text-white">Card Title</h3>
+      <p class="group-hover:text-white">Card text</p>
+    </a>
     <!-- Pseudo Classes -->
-
+    <ul>
+      <li class="max-w-xs even:bg-green-500 odd:bg-orange-500 first:bg-red-200">Item 1</li>
+      <li class="max-w-xs first:bg-red-200 even:bg-green-500 odd:bg-orange-500">Item 2</li>
+      <li class="max-w-xs first:bg-red-200 even:bg-green-500 odd:bg-orange-500">Item 3</li>
+      <li class="max-w-xs first:bg-red-200 even:bg-green-500 odd:bg-orange-500">Item 4</li>
+      <li class="max-w-xs first:bg-red-200 even:bg-green-500 odd:bg-orange-500">Item 5</li>
+      <li class="max-w-xs first:bg-red-200 even:bg-green-500 odd:bg-orange-500">Item 6</li>
+    </ul>
     <!-- Appearance -->
     <!-- Use appearance-none to reset any browser specific styling on an element. This utility is often used when creating custom form components. -->
-
+    <select class="appearance-none">
+      <option value="yes">Yes</option>
+      <option value="No">No</option>
+    </select>
+    <br>
     <!-- Cursor -->
+    <button class="bg-black text-white py-3 px-5 m-3 rounded-lg hover:bg-green-200 hover:text-black focus:bg-green-500 focus:text-black active:bg-green-300 cursor-wait">Submit</button>
+    <button class="bg-black text-white py-3 px-5 m-3 rounded-lg hover:bg-green-200 hover:text-black focus:bg-green-500 focus:text-black active:bg-green-300 cursor-not-allowed">Submit</button>
+    <button class="bg-black text-white py-3 px-5 m-3 rounded-lg hover:bg-green-200 hover:text-black focus:bg-green-500 focus:text-black active:bg-green-300">Submit</button>
 
     <!-- Resize -->
 
     <!-- User Select -->
+    <div class="select-none">Lorem ipsum dolor sit amet.</div>
+    <div class="select-text">Lorem ipsum dolor sit amet.</div>
+    <div class="select-all">Lorem ipsum dolor sit amet.</div>
+    <div class="select-auto">Lorem ipsum dolor sit amet.</div>
 
+    <a href="#item" class="block my-6">Go To Item</a>
     <!-- Smooth Scroll Example -->
+    <p class="my-3 mx-auto max-w-2xl bg-gray-300 p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia a, reprehenderit beatae, aperiam non commodi voluptatem tempore eius nisi sapiente eos eum cum culpa omnis veniam soluta officiis voluptate. Repudiandae fuga harum similique. Voluptatem, rerum magnam! Nihil error veritatis, id non asperiores officiis cupiditate corporis, odit harum fugiat, amet sed. Ratione iste et sequi eaque veniam dolore quam? Nisi dolore reiciendis deleniti suscipit recusandae! Ratione laudantium, cumque eligendi asperiores libero exercitationem magni eius aliquid atque sapiente nisi! Atque excepturi at esse dolores et repellendus deleniti maiores ipsam necessitatibus cumque sit totam dolorem quos nostrum, amet vero placeat illum, nam, dicta sed quas quod ducimus quibusdam. Atque officia cumque tenetur quae maxime cupiditate veniam vitae quaerat blanditiis minus cum quam corrupti nostrum exercitationem aliquid voluptatibus reiciendis, velit obcaecati, sint aperiam. Omnis hic recusandae vel quia distinctio aperiam earum quibusdam nemo inventore ipsa deserunt ut molestias sequi laborum vero iusto soluta sapiente rerum eum, accusamus obcaecati mollitia, quod consectetur! Autem ad fugit dicta ipsum accusamus laudantium, rem illo, iure natus distinctio odit ducimus deleniti fuga quae labore iusto, impedit culpa qui harum saepe cupiditate dolorem? Totam in maiores veritatis neque eveniet! Eius accusamus error perferendis tempore laborum ipsa dicta minus officia in voluptate, reiciendis quasi maiores, enim praesentium repudiandae odio tenetur eum dolore sapiente numquam et soluta suscipit! Vitae, provident. Consequuntur nemo fugiat, ut architecto odit excepturi maiores, numquam provident qui cupiditate eius saepe, voluptate labore eum quasi sequi accusantium. Doloremque voluptates nemo, modi, saepe recusandae doloribus quaerat similique, iste dignissimos minus a velit possimus veniam impedit aperiam quisquam voluptatem corrupti. Illo tempore totam officiis quas voluptate sapiente minus eos, fugit qui dignissimos, consequuntur repellendus minima nesciunt sequi error ipsa necessitatibus odit. Tenetur dolorem, corrupti animi illo ullam voluptatum unde aliquam veritatis. Provident molestiae quaerat nesciunt minus quod? Ratione voluptatibus ab quaerat. Illum excepturi eaque in rerum cupiditate incidunt praesentium quam quidem ipsa ex! Laboriosam velit eligendi iste aliquid. Provident quae, consectetur, exercitationem perspiciatis est voluptate consequuntur placeat porro, quidem cumque sit! Vel, possimus? Rerum quam nihil ipsam sint, consequuntur debitis vitae consequatur, facere iure asperiores eum architecto illum. Minima cupiditate, voluptatum ipsa ut repellendus ratione cum tempore delectus praesentium eveniet exercitationem esse ipsam quidem molestias consequatur impedit rerum non pariatur error. Illum ad sequi asperiores beatae! Aliquam perferendis magnam quibusdam, eius quod modi natus nemo officiis consequuntur atque sunt pariatur laborum totam architecto velit corrupti placeat. Fuga mollitia perferendis id ipsa!</p>
+    <div class="mx-auto max-w-2xl bg-gray-300 p-3" id="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, assumenda! Inventore ex, architecto saepe deserunt vitae consequuntur voluptas maxime, blanditiis odit porro et totam numquam soluta illo voluptatum libero amet nihil, repellat vero. Ea eius consequatur omnis rerum repudiandae dolore at cumque, facere, nobis velit, asperiores vitae? Recusandae, veniam nisi!</div>
   </body>
 </html>
 
