--- a/06-layout-position/index.html
+++ b/06-layout-position/index.html
@@ -9,28 +9,65 @@
   </head>
   <body>
     <!-- Positioning -->
+    <div class="relative w-1/2 h-12 bg-red-200">
+      <p>Parent Element</p>
+      <div class="absolute bottom-0 right-0 bg-red-500">Absolute Child</div>
+    </div>
 
     <!-- Top left corner -->
-
+    <div class="relative w-32 h-32 bg-yellow-200">
+      <div class="absolute left-0 top-0 h-16 w-16 bg-yellow-400"></div>
+    </div>
     <!-- Top right corner -->
-
+    <div class="relative w-32 h-32 bg-red-200">
+      <div class="absolute right-0 top-0 h-16 w-16 bg-blue-400"></div>
+    </div>
     <!-- Bottom left corner -->
-
+    <div class="relative w-32 h-32 bg-yellow-200">
+      <div class="absolute left-0 bottom-0 h-16 w-16 bg-yellow-400"></div>
+    </div>
     <!-- Bottom right corner -->
-
+    <div class="relative w-32 h-32 bg-red-200">
+      <div class="absolute left-0 bottom-0 h-16 w-16 bg-blue-400"></div>
+    </div>
     <!-- Span top edge -->
-
+    <div class="relative w-32 h-32 bg-yellow-200">
+      <div class="absolute inset-x-0 top-0 h-16 bg-yellow-400"></div>
+    </div>
     <!-- Span left edge -->
-
+    <div class="relative w-32 h-32 bg-yellow-200">
+      <div class="absolute inset-y-0 left-0 w-16 bg-yellow-400"></div>
+    </div>
     <!-- Span right edge -->
-
+    <div class="relative w-32 h-32 bg-yellow-200">
+      <div class="absolute inset-y-0 right-0 w-16 bg-yellow-400"></div>
+    </div>
     <!-- Span bottom edge -->
-
+    <div class="relative w-32 h-32 bg-yellow-200">
+      <div class="absolute bottom-0 inset-x-0 h-16 bg-yellow-400"></div>
+    </div>
     <!-- Display Classes -->
-
+    <div class="w-1/4">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ad optio at, quae, <span class="inline">THIS IS INLINE </span> qui dolorum quaerat deserunt repudiandae ipsum eligendi, quas reiciendis magni. Ea ex quidem <span class="inline-block">INLINE BLOCK THIS IS </span>voluptas nemo earum, aspernatur quasi odit eaque cum rerum eum ipsum maiores aliquid <span class="block">THis is block</span> harum voluptate, <span class="hidden">JOHN CENA </span> temporibus quod. Ducimus nobis assumenda minima odio, voluptatem odit autem enim alias, officia illo repudiandae?
+      <!--hidden class gives display none-->
+    </div>
     <!-- Z-Index -->
-
+      <div class="relative h-36">
+        <div class="absolute w-24 left-10 h-24 bg-blue-200 z-50">1</div>
+        <div class="absolute w-24 left-20 h-24 bg-blue-300">2</div>
+        <div class="absolute w-24 left-40 h-24 bg-blue-400 z-10">3</div>
+        <div class="absolute w-24 left-60 h-24 bg-blue-500 z-20">4</div>
+        <div class="absolute w-24 left-80 h-24 bg-blue-600 z-30">5</div>
+    </div>
     <!-- Floats -->
+    <div class="w-1/2">
+      <img class="h-48 w-48 float-left m-4" src="../assets/img/img1.jpg" alt="">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia maiores, temporibus earum veritatis, atque sed a deleniti, ad repellat inventore itaque sunt minima iusto maxime nemo explicabo amet reprehenderit adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia maiores, temporibus earum veritatis, atque sed a deleniti, ad repellat inventore itaque sunt minima iusto maxime nemo explicabo amet reprehenderit adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia maiores, temporibus earum veritatis, atque sed a deleniti, ad repellat inventore itaque sunt minima iusto maxime nemo explicabo amet reprehenderit adipisci.Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia maiores, temporibus earum veritatis, atque sed a deleniti, ad repellat inventore itaque sunt minima iusto maxime nemo explicabo amet reprehenderit adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia maiores, temporibus earum veritatis, atque sed a deleniti, ad repellat inventore itaque sunt minima iusto maxime nemo explicabo amet reprehenderit adipisci.
+      </p>
+    </div>
+
+    </div>
   </body>
 </html>
 
