--- a/07-backgrounds-shadows/index.html
+++ b/07-backgrounds-shadows/index.html
@@ -9,12 +9,27 @@
   </head>
   <body>
     <!-- Background Classes -->
-
+    <div class="h-64 w-72 bg-no-repeat bg-cover bg-center" style="background-image: url('../assets/img/img1.jpg');"></div>
     <!-- Gradients -->
-
+    <div class="h-24 bg-gradient-to-r from-cyan-500 to-blue-500"></div>
+    <div class="h-24 bg-gradient-to-l from-cyan-500 to-blue-500"></div>
     <!-- Shadows -->
-
+    <div class="w-96 mt-6 ml-4 p-3 shadow">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga soluta blanditiis assumenda maxime impedit reprehenderit quibusdam sequi voluptate esse omnis at repellat, beatae magnam labore voluptatem ad rerum harum suscipit!</div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-md">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga soluta blanditiis assumenda maxime impedit reprehenderit quibusdam sequi voluptate esse omnis at repellat, beatae magnam labore voluptatem ad rerum harum suscipit!</div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-lg">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga soluta blanditiis assumenda maxime impedit reprehenderit quibusdam sequi voluptate esse omnis at repellat, beatae magnam labore voluptatem ad rerum harum suscipit!</div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-xl">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga soluta blanditiis assumenda maxime impedit reprehenderit quibusdam sequi voluptate esse omnis at repellat, beatae magnam labore voluptatem ad rerum harum suscipit!</div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-inner">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga soluta blanditiis assumenda maxime impedit reprehenderit quibusdam sequi voluptate esse omnis at repellat, beatae magnam labore voluptatem ad rerum harum suscipit!</div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-inner shadow-blue-500/100">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga soluta blanditiis assumenda maxime impedit reprehenderit quibusdam sequi voluptate esse omnis at repellat, beatae magnam labore voluptatem ad rerum harum suscipit!</div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-inner shadow-red -500/100">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga soluta blanditiis assumenda maxime impedit reprehenderit quibusdam sequi voluptate esse omnis at repellat, beatae magnam labore voluptatem ad rerum harum suscipit!</div>
     <!-- Mix Blend -->
+    <div class="flex justify-center -space-x-24">
+      <div class= "mix-blend-multiply bg-blue-400">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab vitae natus harum molestiae quidem temporibus consequatur voluptatibus odit maxime enim!
+      </div>
+      <div class="mix-blend-multiply bg-pink-400">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab vitae natus harum molestiae quidem temporibus consequatur voluptatibus odit maxime enim!
+      </div>
+    </div>
   </body>
 </html>
 
