--- a/08-borders/index.html
+++ b/08-borders/index.html
@@ -9,10 +9,45 @@
   </head>
   <body>
     <!-- Border Width & Colors -->
-
+    <div class="w-96 m-3 p-5 border">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, sint?
+    </div>
+    <div class="w-96 m-3 p-5 border-2">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, sint?
+    </div>
+    <div class="w-96 m-3 p-5 border-4">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, sint?
+    </div>
+    <div class="w-96 m-3 p-5 border-8 border-red-500">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, sint?
+    </div>
+    <div class="w-96 m-3 p-5 border-x-4">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, sint?
+    </div>
+    <div class="w-96 m-3 p-5 border-y-4">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, sint?
+    </div>
+    <div class="w-96 m-3 p-5 border-b-4 border-l-2 border-l-red-100 border-b-blue-100">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, sint?
+    </div>
     <!-- Border Radius -->
-
+    <div class="w-96 m-3 p-5 border-4 border-blue-100 rounded-xl">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, sint?
+    </div>
+    <div class="w-96 m-3 p-5 border-4 border-blue-100 rounded-full">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, sint?
+    </div>
+    <div class="w-96 m-3 p-5 border-4 border-blue-100 rounded-tl-xl">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, sint?
+    </div>
+    <div class="w-96 m-3 p-5 border-4 border-blue-100 rounded-l-xl">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, sint?
+    </div>
     <!-- Outline -->
+    <button class="p-1 outline outline-red-500 rounded-sm">Explode</button>
+    
+    <button class="p-1 outline outline-4 outline-red-500 rounded-sm">Explode</button>
+    <button class=" outline outline-offset-2 outline-4 outline-red-500 rounded-sm">Explode</button>
   </body>
 </html>
 
