--- a/09-filters/index.html
+++ b/09-filters/index.html
@@ -9,16 +9,44 @@
   </head>
   <body>
     <!-- Blur -->
-
+    <div class="blur-sm">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, aliquid?
+    </div>
+    <div class="blur-sm">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, aliquid?
+    </div>
+    <div class="blur">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, aliquid?
+    </div>
+    <div class="blur-xl">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, aliquid?
+    </div>
+    <img class="blur-xl" src="../assets/img/img1.jpg" alt="">
+    <!-- Brightness -->
+    <img src="../assets/img/img2.jpg" alt="" class="brightness-100">
+    <img src="../assets/img/img2.jpg" alt="" class="brightness-50">
+    <img src="../assets/img/img2.jpg" alt="" class="brightness-75">
+    <img src="../assets/img/img2.jpg" alt="" class="brightness-50">
     <!-- Contrast -->
-
+    <img src="../assets/img/img3.jpg" alt="" class="contrast-0">
+    <img src="../assets/img/img3.jpg" alt="" class="contrast-25">
+    <img src="../assets/img/img3.jpg" alt="" class="contrast-50">
+    <img src="../assets/img/img3.jpg" alt="" class="contrast-100">
+    <img src="../assets/img/img3.jpg" alt="" class="contrast-150">
+    <img src="../assets/img/img3.jpg" alt="" class="contrast-200">
     <!-- Grayscale -->
-
+    <img src="../assets/img/img4.jpg" alt="" class="grayscale">
     <!-- Invert -->
-
+    <img src="../assets/img/img4.jpg" alt="" class="invert">
     <!-- Sepia -->
+    <img src="../assets/img/img4.jpg" alt="" class="sepia">
 
     <!-- Hue Rotate -->
+    <img src="../assets/img/img5.jpg" alt="">
+    <img src="../assets/img/img5.jpg" alt="" class="m-4 hue-rotate-30">
+    <img src="../assets/img/img5.jpg" alt="" class="m-4 hue-rotate-60">
+    <img src="../assets/img/img5.jpg" alt="" class="m-4 hue-rotate-90">
+    <img src="../assets/img/img5.jpg" alt="" class="m-4  hue-rotate-180">
   </body>
 </html>
 
