--- a/11-breakpoints/index.html
+++ b/11-breakpoints/index.html
@@ -8,7 +8,18 @@
     <title>Breakpoints & Media Queries</title>
   </head>
   <!-- Tailwind is mobile-first -->
-  <body></body>
+  <body class="bg-black sm:bg-green-800 md:bg-blue-800 lg:bg-yellow-800 xl:bg-purple-800 2xl:bg-red-800">
+    <h1 class="text-white sm:text-xl md:text-3xl 2xl:text-4xl" id="width"></h1>
+    <script>
+      const width = document.getElementById('width')
+      const showBrowserWidth = () =>{
+        const bwidth = window.innerWidth;
+        width.textContent = `The browser width is currently ${bwidth} pixels`
+      }
+      showBrowserWidth();
+      window.addEventListener("resize",showBrowserWidth)
+    </script>
+  </body>
 </html>
 
 <!-- Breakpoint Classes
