--- a/12-columns/index.html
+++ b/12-columns/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
     <!-- Columns -->
-
+    <div class="columns-2">
+      <img src="../assets/img/img1.jpg" alt="" class="w-full">
+      <img src="../assets/img/img2.jpg" alt="" class="w-full">
+      <img src="../assets/img/img3.jpg" alt="" class="w-full">
+      <img src="../assets/img/img4.jpg" alt="" class="w-full">
+    </div>
     <!-- Aspect Ratio -->
   </body>
 </html>
